# WhOSSprFlow

./: .gitignore  .venv  ARCHITECTURE.md  INSTRUCTIONS.md  README.md  SPEC.md  TEST_PLAN.md  config.example.json  main.py  pyproject.toml  whosspr.json
tests/: conftest.py  test_audio_recorder.py  test_cli.py  test_config.py  test_controller.py  test_core.py  test_dictation_controller.py  test_e2e_manual.py  test_enhancement.py  test_integration.py  test_keyboard_listener.py  test_logging.py  test_new_cli.py  test_new_config.py  test_new_core.py  test_new_enhancer.py  test_permissions.py  test_text_inserter.py  test_transcriber.py
whossper/: __init__.py  cli.py  cli_new.py  config_new.py  core.py  core_new.py  enhancer.py  logging_config.py
whossper/audio/: __init__.py  recorder.py
whossper/config/: __init__.py  manager.py  schema.py
whossper/core/: __init__.py  dictation_controller.py
whossper/enhancement/: __init__.py  openai_enhancer.py
whossper/input/: __init__.py  keyboard_listener.py  text_inserter.py
whossper/permissions/: __init__.py  mac_permissions.py
whossper/transcription/: __init__.py  whisper_transcriber.py
whosspr/: cli.py  config.py  controller.py  core.py  inserter.py
