[project]
name = "whossper"
version = "0.1.0"
description = "WhOSSper Flow - Open Source Speech-to-Text for macOS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-whisper>=20240930",
    "pyaudio>=0.2.14",
    "pynput>=1.7.6",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pyperclip>=1.8.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
whossper = "whossper.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
